solc_mutator_ossfuzz_seed_corpus/test_sol/test_399c3c7b768e47c86312dcb0f1a66dc7923bba394ffdbd05299660cf52fa8ecc_4f3d4dc25dd18731225047bc6cb94bbb457bd6a0_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bool i0,bool i1,bytes12 i2)  returns(address o0,bytes22 o1,int40 o2)
{
}
function f1(function () external i0,bool i1,address i2)  returns(bytes memory o0,bool o1)
{
  i1 = (158 < (174 - (109 % ((175 % ~(((~(164) >> (101 + 229)) >> (((229 + 4) << 61) << 246)))) % 72))));


}
pragma abicoder v1;
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
function f2(bool i0)  returns(uint40 o0,bytes memory o1)
{

}
function f3(uint224 i0,bool i1)  returns(uint40 o0,bytes3 o1)
{ }
// ----
// TypeError 2271: (su0.sol:216-269): Operator >> not compatible with types int_const -1 and int_const 6075...(87 digits omitted)...1824
// TypeError 2271: (su0.sol:207-271): Operator % not compatible with types int_const 175 and int_const 0
